# parcel-browser

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Deployment.md  Dockerfile  LICENSE  README.md  conftest.py  crontab  fly.prod.toml  fly.toml  mamba-env.yml  manage.py  old-requirements.txt  parcel_play.ipynb  poetry.toml  pyproject.toml  requirements.txt  yigby_search.py
.github/workflows/: black.yml  django-ci.yml  django.yml  frontend.yml
be/: conftest.py  manage.py  pytest.ini
be/co/: co_api.py  urls.py  views.py
be/elt/: admin.py  admin_site.py  admin_utils.py  home3_admin.py  urls.py  views.py  widgets.py
be/facts/: models.py
be/lib/: g_sheets.py  mapbox.py  mgmt_lib.py  models_lib.py  ninja_api.py  power_bi.py  reonomy_api.py  scrape_hcd_lib.py  sfplanning_api.py  sfplanning_calls.py  util.py
be/mygeo/: settings.py  wsgi.py
be/parsnip/: apps.py  asgi.py  settings.py  urls.py  util.py  wsgi.py
be/props/: api.py  models.py  tests.py
be/userflows/: api.py  api_schema.py  apps.py  lib.py  models.py  tests.py  urls_login.py  views.py
be/world/: admin.py  api.py  api_gis_schema.py  urls.py  views.py
co/: apps.py  co_api.py  urls.py  views.py
deploy/postgres/: Dockerfile  README.md  fly.prod.toml  fly.toml
deploy/static_tile_pipeline/: README.md
docs/: Deployment.md  archived-brew-setup.md  elt.md  setup.md  static-files.md
elt/: README.md  apps.py
elt/lib/: attom_data.py  elt_api.py
elt/migrations/: 0014_rawcaliforniaoppzone.py  0015_rawscagtpa.py  0016_raworangecountyroad.py
elt/models/: __init__.py  external_api_data.py  raw.py  raw_california_oppzone.py  raw_orange_county_road.py  raw_santa_ana_parcel.py  raw_santa_ana_zoning.py  raw_scag_tpa.py
elt/tests/: test_attom_api.py
facts/: models.py
fe/: .eslintrc.cjs  .postcssrc  .prettierignore  jest.config.cjs  package.json  tailwind.config.cjs  tsconfig.json
fe/.storybook/: main.ts  preview.ts
fe/partials/: app.partial.html  headend.partial.html  login.partial.html
fe/src/: Routes.tsx  TestButton.tsx  constants.ts  h3-preflight.css  index.OLD.html  index.css  map.ts  parcel-detail.ts  types.ts
frontend/: .eslintrc.cjs  .gitignore  .parcelrc  .postcssrc  .prettierignore  .prettierrc  jest.config.cjs  package.json  prettier.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  turbopropcolors.json
frontend/partials/: bodyend.partial.html
frontend/src/: App.tsx  Routes.tsx  TestButton.tsx  constants.ts  index.css  index.html  index.tsx  map.ts  parcel-detail.ts  types.ts
lib/: analyze_parcel_lib.py  analyze_road_lib.py  attom_comp_data_struct.py  attom_data.py  attom_data_struct.py  build_lib.py  crs_lib.py  db_lib.py  finance_lib.py  g_sheets.py  listings_lib.py  mapbox.py  mgmt_cmd_lib.py  neighborhoods.py  ninja_api.py  parallel_worker.py  parcel_lib.py  plot_lib.py  postgres_lib.py  power_bi.py  re_params.py  rent_lib.py  scrape_hcd_lib.py  scrape_hcd_lib_old.py  scraping_lib.py  shapely_lib.py  topo_lib.py  types.py  util.py  zoning_rules.py
lib/co/: co_eligibility_lib.py  test_co_eligibility.py
lib/extract/: elt_utils.py
lib/parcel_analysis_2022/: analyze_parcel_lib.py  parcel_lib.py  plot_lib.py  rent_lib.py  scraping_lib.py  shapely_lib.py  topo_lib.py  zoning_rules.py
lib/scrape_hcd/: review_request_body.json
lib/tests/: attom_data_fixtures.py  test_attom_api.py
mygeo/: asgi.py  ninja_api.py  settings.py  urls.py  util.py  wsgi.py
mygeo/static/: site.webmanifest
notebooks/: notebook_util.py  parcel_play.ipynb  richard_parcel_play.ipynb  topotest.py
props/: api.py  apps.py  schema.py  tests.py
props/migrations/: 0001_initial.py
scripts/: richard_parcel_test.py
userflows/: api.py  api_schema.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
userflows/archive/: auth0_views.py
userflows/migrations/: 0001_initial.py  0003_user_email_verified_ts.py  0005_userprofile.py
world/: admin.py  api.py  api_gis_schema.py  auth_views.py  django_cache.py  infra_views.py  load.py  models.py  serializers.py  urls.py  views.py  viewsets.py
world/email/: __init__.py  mailersend_backend.py
world/infra/: MyWhiteNoiseMiddleware.py  __init__.py  cicd_models.py  cloudflare_middleware.py  django_cache.py  frontend_proxy_view.py  mailersend_backend.py  my_white_noise_middleware.py  template_parcel_reloader.py
world/migrations/: 0001_initial.py  0002_marker.py  0002_remove_user_username_alter_user_email.py  0003_delete_user.py  0007_alter_parcel_year_effec.py  0009_alter_parcel_own_addr2.py  0010_alter_parcel_situs_stre_alter_parcel_situs_suff.py  0011_alter_parcel_submap_alter_parcel_subname.py  0015_alter_parcel_legldesc.py  0017_alter_parcel_apn_8.py  0018_alter_parcel_own_addr1.py  0019_alter_parcel_own_zip.py  0020_alter_parcel_situs_juri.py  0021_alter_parcel_taxstat.py  0025_alter_parcel_multi.py  0026_zoningbase.py  0028_alter_buildingoutlines_comment.py  0030_parcel_world_parce_apn_d58599_idx.py  0032_analyzedparcel_and_more.py  0033_topography.py  0034_topographyloads_parcelslope_and_more.py  0035_parcelscenario_buildingonscenario.py  0040_parcel_world_parce_situs_a_92695e_idx.py  0048_alter_propertylisting_ba_alter_propertylisting_br.py  0049_remove_buildingonscenario_building_and_more.py  0051_migrate_and_make_unique_analyzed_listing.py  0052_alter_analyzedlisting_listing.py  0053_alter_analyzedlisting_listing.py  0054_rentaldata.py  0059_propertylisting_world_prope_parcel__d2082d_idx.py  0060_housingsolutionarea.py  0063_remove_roads_id_alter_roads_roadsegid.py  0064_analyzedroad_and_more.py  0066_alter_analyzedroad_status_and_more.py  0067_remove_analyzedparcel_world_analy_apn_25470e_idx_and_more.py
world/models/: __init__.py  base_models.py  base_models_mapping.py  models.py  rental_data.py  user_model.py
world/old_migrations/: 0003_parcel.py  0004_alter_parcel_own_name1_alter_parcel_own_name2_and_more.py  0005_alter_parcel_own_addr3_alter_parcel_own_addr4_and_more.py  0006_alter_parcel_carport_st_alter_parcel_garage_con_and_more.py  0012_alter_parcel_situs_zip.py  (+30 more)
(+253 files in other folders)
