
[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mygeo.settings"

[tool.black]
# See Black command line options here:
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
line-length = 115
target-version = ["py39"]
workers = 4
verbose = false
extend-exclude = ".*migrations/"

[tool.poetry]
name = "parsnip"
version = "0.1.0"
description = ""
authors = ["Nils Bunger <nilsbunger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.0.x"
django-environ = "^0.9.0"
whitenoise = "^6.2.0"
django-extensions = "^3.2.1"
psycopg2 = "^2.9.5"
pydantic = "^1.10.2"
django-vectortiles = "^0.2.0"
django-ninja = "^0.19.1"
boto3 = "^1.25.1"
matplotlib = "^3.6.1"
rasterio = "^1.3.3"
joblib = "^1.2.0"
gunicorn = "^20.1.0"
requests = "^2.28.1"
scraperapi-sdk = "^0.2.2"
scrapy = "^2.7.0"
shapely = "^1.8.5.post1"
geopandas = "^0.12.0"
authlib = "^1.1.0"
sentry-sdk = "^1.12.1"
django-two-factor-auth = {extras = ["phonenumbers"], version = "^1.14.0"}

[tool.poetry.group.dev.dependencies]
django-silk = "^5.0.1"
locust = "^2.12.2"
black = "^22.10.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
